# jp-cards

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: windows-release.yml
packaging/: jp-cards.desktop
packaging/arch/: PKGBUILD
resources/fonts/: README.md
src/: main.cpp
src/app/: FlashcardsController.cpp  FlashcardsController.h  PrintController.cpp  PrintController.h
src/domain/: Card.h  CardDeck.cpp  CardDeck.h  CsvLoader.cpp  CsvLoader.h
src/render/: FontProvider.cpp  FontProvider.h  PdfGenerator.cpp  PdfGenerator.h
src/ui/: CardEditorDialog.cpp  CardEditorDialog.h  MainWindow.cpp  MainWindow.h
tests/: CMakeLists.txt  test_card_deck.cpp  test_csv_loader.cpp  test_flashcards_controller.cpp  test_pdf_generator.cpp  test_print_controller.cpp
